add leaflet lib

--- a/Fly.WebUI/Views/Shared/_Layout.cshtml
+++ b/Fly.WebUI/Views/Shared/_Layout.cshtml
@@ -6,6 +6,8 @@
     <title>Fly</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
+    <link rel="stylesheet" href="~/lib/leaflet/leaflet.css" />
+    <script src="~/lib/leaflet/leaflet.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Fly.WebUI.styles.css" asp-append-version="true" />
 </head>
