--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -1,6 +1,9 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
-}
+﻿<div id="map" style="width: 100%; height: 800px;"></div>
 
-
-
+<script>
+	const map = L.map('map').setView([50.4501, 30.5234], 6);
+	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+		maxZoom: 19,
+		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+	}).addTo(map);
+</script>
