--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -1,4 +1,6 @@
-﻿<div id="map" style="width: 100%; height: 820px;"></div>
+﻿<div class="card">
+	<div id="map" style="width: 100%; height: 820px;"></div>
+</div>
 
 <script>
 	const map = L.map('map').setView([50.4501, 30.5234], 6);
@@ -7,3 +9,6 @@
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
 </script>
+
+<script src="~/js/signalr/dist/browser/signalr.js"></script>
+<script src="~/js/chat.js"></script>
