--- a/Fly.WebUI/Views/Shared/_Layout.cshtml
+++ b/Fly.WebUI/Views/Shared/_Layout.cshtml
@@ -40,6 +40,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Login">@Localizer["Login"]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">@Localizer["Logout"]</a>
+                        </li>
                     </ul>
                     <div>
                         @await Html.PartialAsync("_SelectLanguagePartial")
