--- a/Fly.WebUI/Views/Shared/_Layout.cshtml
+++ b/Fly.WebUI/Views/Shared/_Layout.cshtml
@@ -43,6 +43,9 @@
                         <li class="nav-item">
                             <a class="nav-link text-light" asp-area="" asp-controller="Account" asp-action="Logout">@Localizer["Logout"]</a>
                         </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-light" asp-area="" asp-controller="Manager" asp-action="Index">Manager</a>
+                        </li>
                     </ul>
                     <div>
                         @await Html.PartialAsync("_SelectLanguagePartial")
