--- a/Fly.WebUI/Views/Airports/Detalis.cshtml
+++ b/Fly.WebUI/Views/Airports/Detalis.cshtml
@@ -5,10 +5,10 @@
     <hr />
     <dl class="row">
         <dt class = "col-sm-2">
-            @Html.DisplayNameFor(model => model.AirporId)
+            @Html.DisplayNameFor(model => model.IATALocationIdentifier)
         </dt>
         <dd class = "col-sm-10">
-            @Html.DisplayFor(model => model.AirporId)
+            @Html.DisplayFor(model => model.IATALocationIdentifier)
         </dd>
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Address)
