--- a/Fly.WebUI/Views/Airports/Details.cshtml
+++ b/Fly.WebUI/Views/Airports/Details.cshtml
@@ -48,7 +48,23 @@
         </dd>
     </dl>
 </div>
+<div class="card">
+    <div id="map" style="width: 100%; height: 300px;"></div>
+</div>
+
+<script>
+    const map = L.map('map').setView([50.4501, 30.5234], 6);
+    const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
+        maxZoom: 19,
+        attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
+    }).addTo(map);
+    L.marker([@Model.Latitude, @Model.Longitude]).addTo(map)
+        .bindPopup('@(Model.Name)')
+        .openPopup();
+</script>
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     <a asp-action="Index">Back to List</a>
 </div>
+
+
