--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -2,13 +2,28 @@
 	<div id="map" style="width: 100%; height: 820px;"></div>
 </div>
 
+<script src="~/lib/microsoft-signalr/signalr.min.js"></script>
+
 <script>
 	const map = L.map('map').setView([50.4501, 30.5234], 6);
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
 	}).addTo(map);
+
+	const hubConnection = new signalR.HubConnectionBuilder()
+		.withUrl("https://localhost:5000/locations")
+        .build();
+
+	hubConnection.on("Send", function (data) {
+			console.log(data);
+    });
+
+	hubConnection.on("Message", function (data) {
+		console.log(data);
+	});
+
+    hubConnection.start().then(() => console.log('Connection started.......!')).catch(err => console.log('Error while connect with server'));
+
 </script>
 
-<script src="~/js/signalr/dist/browser/signalr.js"></script>
-<script src="~/js/chat.js"></script>
