--- a/Fly.WebUI/Views/Shared/_Layout.cshtml
+++ b/Fly.WebUI/Views/Shared/_Layout.cshtml
@@ -10,8 +10,8 @@
     <title>Fly</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
     <link rel="stylesheet" href="~/lib/bootstrap-icons/font/bootstrap-icons.min.css" />
-    <link rel="stylesheet" href="~/lib/leaflet/leaflet.css" />
-    <script src="~/lib/leaflet/leaflet.js"></script>
+    <link rel="stylesheet" href="~/lib/leaflet/leaflet.min.css" />
+    <script src="~/lib/leaflet/leaflet.min.js"></script>
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/Fly.WebUI.styles.css" asp-append-version="true" />
 </head>
@@ -27,10 +27,10 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item" style="">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-airplane-fill" style="font-size:24px; color: deepskyblue"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Index"><i class="bi bi-airplane-fill" style="font-size:24px; color: skyblue"></i></a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Search"><i class="bi bi-binoculars-fill" style="font-size:24px; color:deepskyblue"></i></a>
+                            <a class="nav-link" asp-area="" asp-controller="Home" asp-action="Search"><i class="bi bi-binoculars-fill" style="font-size:24px; color:skyblue"></i></a>
                         </li>
                     </ul>
                     <ul class="navbar-nav">
