--- a/Fly.WebUI/Views/Home/Index.cshtml
+++ b/Fly.WebUI/Views/Home/Index.cshtml
@@ -2,10 +2,13 @@
 	<div id="map" style="width: 100%; height: 820px;"></div>
 </div>
 
+<script src="~/lib/leaflet-rotatedmarker/leaflet.rotatedMarker.js"></script>
 <script src="~/lib/microsoft-signalr/signalr.min.js"></script>
+<script src="~/lib/leaflet.markercluster/leaflet.markercluster.js"></script>
 
 <script>
 	const map = L.map('map').setView([50.4501, 30.5234], 6);
+
 	const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
 		maxZoom: 19,
 		attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
@@ -15,15 +18,28 @@
 		.withUrl("https://localhost:5000/locations")
         .build();
 
-	hubConnection.on("Send", function (data) {
-			console.log(data);
-    });
+	const icon = L.icon({
+		iconUrl: 'plane.png',
+		iconSize: [40, 40],
+		iconAnchor: [20, 20]
 
-	hubConnection.on("Message", function (data) {
-		console.log(data);
 	});
 
-    hubConnection.start().then(() => console.log('Connection started.......!')).catch(err => console.log('Error while connect with server'));
+	let markers = L.markerClusterGroup()
 
+	hubConnection.on("Locations", function (locations) {
+		markers.eachLayer(layer => {            
+			markers.removeLayer(layer);
+		});
+		locations.forEach(function (item, i, locations) {
+			console.log(i + " : " + item.latitude + " / " + item.longitude);
+			var marker = L.marker([item.latitude, item.longitude], { icon: icon, rotationAngle: item.directionAngle});
+			markers.addLayer(marker);
+		});
+    });
+
+	map.addLayer(markers);
+
+    hubConnection.start().then(() => console.log('Connection started.......!')).catch(err => console.log('Error while connect with server'));
 </script>
 
