--- a/Fly.WebUI/Views/Airports/Details.cshtml
+++ b/Fly.WebUI/Views/Airports/Details.cshtml
@@ -53,15 +53,18 @@
 </div>
 
 <script>
-    const map = L.map('map').setView([50.4501, 30.5234], 6);
+    const map = L.map('map').setView([@Model.Latitude, @Model.Longitude], 10);
+
     const tiles = L.tileLayer('https://tile.openstreetmap.org/{z}/{x}/{y}.png', {
         maxZoom: 19,
         attribution: '&copy; <a href="http://www.openstreetmap.org/copyright">OpenStreetMap</a>'
     }).addTo(map);
+
     L.marker([@Model.Latitude, @Model.Longitude]).addTo(map)
         .bindPopup('@(Model.Name)')
         .openPopup();
 </script>
+
 <div>
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     <a asp-action="Index">Back to List</a>
