--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -24,72 +24,76 @@
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                 Model Type
-                            </th>
-                            <th>
-                                 Serial Number
-                            </th>
-                            <th>
-                                 Manufacture Date 
-                            </th>
-                            <th>
-                                 Flight Hours 
-                            </th> 
-                            <th>
-                                 Aircraft State 
-                            </th>
-                            <th>
-                                 Airline Name 
-                            </th>
-                            <th>
-                                 Airport Name
-                            </th>
-                            <th>
-                                 Id
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PagedResponse)
-                        {
+                <br />
+                <div class="card-body">
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ModelType)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SerialNumber)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ManufactureDate)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.FlightHours)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.AircraftState)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Airline.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Airport.Name)
-                                    @Html.DisplayFor(modelItem => item.Airport.City.IsoCountry)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Id)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id })
-                                </td>
+                                <th>
+                                    Model Type
+                                </th>
+                                <th>
+                                    Serial Number
+                                </th>
+                                <th>
+                                    Manufacture Date
+                                </th>
+                                <th>
+                                    Flight Hours
+                                </th>
+                                <th>
+                                    Aircraft State
+                                </th>
+                                <th>
+                                    Airline Name
+                                </th>
+                                <th>
+                                    Airport Name
+                                </th>
+                                <th>
+                                    Id
+                                </th>
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ModelType)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SerialNumber)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ManufactureDate)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.FlightHours)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.AircraftState)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Airline.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Airport.Name)
+                                        @Html.DisplayFor(modelItem => item.Airport.City.IsoCountry)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Id)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
