--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -16,43 +16,47 @@
                     <br/>
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                Country
-                            </th>
-                            <th>
-                                Region
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PagedResponse)
-                        {
+                <br />
+                <div class="card-body">
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IsoCountry)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.IsoRegion)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                                </td>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+                                    Country
+                                </th>
+                                <th>
+                                    Region
+                                </th>
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsoCountry)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.IsoRegion)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
