--- a/Fly.WebUI/Views/Flights/Index.cshtml
+++ b/Fly.WebUI/Views/Flights/Index.cshtml
@@ -24,58 +24,62 @@
                     <br/>
                     <input type="submit" value=@Localizer["Search"] class="btn btn-primary" />
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                 DepartureAirport
-                            </th>
-                            <th>
-                                 ArrivalAirport
-                            </th>
-                            <th>
-                                 Aircraft
-                            </th>
-                            <th>
-                                 Departure
-                            </th>
-                            <th>
-                                 Arrival
-                            </th>
-                           
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PagedResponse)
-                        {
+                <br />
+                <div class="card-body">
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DepartureAirport.Name)
-                                    @Html.DisplayFor(modelItem => item.DepartureAirport.City.IsoCountry)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ArrivalAirport.Name)
-                                    @Html.DisplayFor(modelItem => item.DepartureAirport.City.IsoCountry)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Aircraft.ModelType)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.DepartureDateTime)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.ArrivalDateTime)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                                </td>
+                                <th>
+                                    DepartureAirport
+                                </th>
+                                <th>
+                                    ArrivalAirport
+                                </th>
+                                <th>
+                                    Aircraft
+                                </th>
+                                <th>
+                                    Departure
+                                </th>
+                                <th>
+                                    Arrival
+                                </th>
+
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DepartureAirport.Name)
+                                        @Html.DisplayFor(modelItem => item.DepartureAirport.City.IsoCountry)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ArrivalAirport.Name)
+                                        @Html.DisplayFor(modelItem => item.DepartureAirport.City.IsoCountry)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Aircraft.ModelType)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.DepartureDateTime)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.ArrivalDateTime)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
+                
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
