--- a/Fly.WebUI/Views/Seats/Index.cshtml
+++ b/Fly.WebUI/Views/Seats/Index.cshtml
@@ -12,55 +12,58 @@
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                 Row
-                            </th>
-                            <th>
-                                 Column
-                            </th>
-                            <th>
-                                 Seat Class
-                            </th>
-                            <th>
-                                 Aircraft
-                            </th>
-                            <th>
-                                Tikets Count
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PagedResponse)
-                        {
+                <br />
+                <div class="card-body">
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Row)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Column)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.SeatClass)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Aircraft.ModelType)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Tickets.Count)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                                </td>
+                                <th>
+                                    Row
+                                </th>
+                                <th>
+                                    Column
+                                </th>
+                                <th>
+                                    Seat Class
+                                </th>
+                                <th>
+                                    Aircraft
+                                </th>
+                                <th>
+                                    Tikets Count
+                                </th>
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Row)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Column)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.SeatClass)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Aircraft.ModelType)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Tickets.Count)
+                                    </td>
+                                    <td>
+                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
 
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
