centered cards in ui

--- a/Fly.WebUI/Views/Administrator/Index.cshtml
+++ b/Fly.WebUI/Views/Administrator/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<div class="card bg-dark text-white">
+﻿<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/aircraft.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-dark ">Aircrafts</p>
@@ -6,7 +6,7 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/flight.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-light ">Flight</p>
@@ -14,7 +14,7 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-dark text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/airport.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-light ">Airports</p>
@@ -22,15 +22,15 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-dark text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/manager.jpg" alt="Card image">
     <div class="card-img-overlay">
-        <p class="display-1 card-title text-uppercase text-dark ">Managers</p>
+        <p class="display-1 card-title text-uppercase text-light ">Managers</p>
         <a href="/managers" class="stretched-link"></a>
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/airline.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-light ">Airlines</p>
@@ -38,7 +38,7 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/seat.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-dark ">Seats</p>
@@ -46,7 +46,7 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/ticket.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-light ">Tickets</p>
@@ -54,7 +54,7 @@
     </div>
 </div>
 <br />
-<div class="card bg-dark text-white">
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
     <img class="card-img" src="~/city.jpg" alt="Card image">
     <div class="card-img-overlay">
         <p class="display-1 card-title text-uppercase text-dark ">Cities</p>
