--- a/Fly.WebUI/Views/Aircrafts/Index.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Index.cshtml
@@ -3,7 +3,7 @@
 @model AircraftsViewModel;
 @inject IViewLocalizer Localizer
 
-<div class="card">
+<div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/aircraft.jpg">
     <div class="card-body">
         <form asp-action="Index">
@@ -86,7 +86,9 @@
                                         @Html.DisplayFor(modelItem => item.Id)
                                     </td>
                                     <td>
-                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                        @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id }) |
+                                        @Html.ActionLink("Delete", "Delete", new { id=item.Id })
                                     </td>
                                 </tr>
                             }
