--- a/Fly.WebUI/Views/Airports/Index.cshtml
+++ b/Fly.WebUI/Views/Airports/Index.cshtml
@@ -3,7 +3,7 @@
 @model AirportsViewModel;
 @inject IViewLocalizer Localizer
 
-<div class="card ">
+<div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/airport.jpg">
     <div class="card-body">
         <form asp-action="Index">
