--- a/Fly.WebUI/Views/Cities/Index.cshtml
+++ b/Fly.WebUI/Views/Cities/Index.cshtml
@@ -3,7 +3,7 @@
 @model CitiesViewModel;
 @inject IViewLocalizer Localizer
 
-<div class="card">
+<div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/city.jpg">
     <div class="card-body">
         <form asp-action="Index">
