--- a/Fly.WebUI/Views/Seats/Edit.cshtml
+++ b/Fly.WebUI/Views/Seats/Edit.cshtml
@@ -2,7 +2,7 @@
 
 
 <div class="card  mx-auto" style="width:1000px">
-    <img class="card-img-top" src="~/aircraft.jpg">
+    <img class="card-img-top" src="~/seat.jpg">
     <div class="card-body">
         <form asp-action="Edit">
             <br />
