--- a/Fly.WebUI/Views/Aircrafts/Create.cshtml
+++ b/Fly.WebUI/Views/Aircrafts/Create.cshtml
@@ -1,60 +1,62 @@
 ﻿@model Fly.Core.Entities.Aircraft
 
-<h4>Aircraft</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
-        <form asp-action="Create">
-            <div asp-validation-summary="ModelOnly" class="text-danger"></div>
-            <div class="form-group">
-                <label asp-for="ModelType" class="control-label"></label>
-                <input asp-for="ModelType" class="form-control" />
-                <span asp-validation-for="ModelType" class="text-danger"></span>
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/aircraft.jpg">
+    <div class="card-body">
+            <form asp-action="Create">
+            <br />
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+                <div class="form-group">
+                    <label asp-for="ModelType" class="control-label"></label>
+                    <input asp-for="ModelType" class="form-control" />
+                    <span asp-validation-for="ModelType" class="text-danger"></span>
+                </div>
+                <br />
+                <div class="form-group">
+                    <label asp-for="SerialNumber" class="control-label"></label>
+                    <input asp-for="SerialNumber" class="form-control" />
+                    <span asp-validation-for="SerialNumber" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <label asp-for="ManufactureDate" class="control-label"></label>
+                    <input asp-for="ManufactureDate" class="form-control" />
+                    <span asp-validation-for="ManufactureDate" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <label asp-for="FlightHours" class="control-label"></label>
+                    <input asp-for="FlightHours" class="form-control" />
+                    <span asp-validation-for="FlightHours" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <label asp-for="AircraftState" class="control-label"></label>
+                    <input asp-for="AircraftState" class="form-control" />
+                    <span asp-validation-for="AircraftState" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <label asp-for="AirlineId" class="control-label"></label>
+                    <input asp-for="AirlineId" class="form-control" />
+                    <span asp-validation-for="AirlineId" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <label asp-for="AirportId" class="control-label"></label>
+                    <input asp-for="AirportId" class="form-control" />
+                    <span asp-validation-for="AirportId" class="text-danger"></span>
+                </div>
+            <br />
+                <div class="form-group">
+                    <input type="submit" value="Create" class="btn btn-primary" />
+                </div>
+            </form>
+        <br />
+            <div>
+                <a asp-action="Index">Back to List</a>
             </div>
-            <div class="form-group">
-                <label asp-for="SerialNumber" class="control-label"></label>
-                <input asp-for="SerialNumber" class="form-control" />
-                <span asp-validation-for="SerialNumber" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="ManufactureDate" class="control-label"></label>
-                <input asp-for="ManufactureDate" class="form-control" />
-                <span asp-validation-for="ManufactureDate" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="FlightHours" class="control-label"></label>
-                <input asp-for="FlightHours" class="form-control" />
-                <span asp-validation-for="FlightHours" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AircraftState" class="control-label"></label>
-                <input asp-for="AircraftState" class="form-control" />
-                <span asp-validation-for="AircraftState" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AirlineId" class="control-label"></label>
-                <input asp-for="AirlineId" class="form-control" />
-                <span asp-validation-for="AirlineId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="AirportId" class="control-label"></label>
-                <input asp-for="AirportId" class="form-control" />
-                <span asp-validation-for="AirportId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <input type="submit" value="Create" class="btn btn-primary" />
-            </div>
-        </form>
     </div>
-</div>
-
-<div>
-    <a asp-action="Index">Back to List</a>
 </div>
 
 @section Scripts {
