--- a/Fly.WebUI/Views/Airports/Index.cshtml
+++ b/Fly.WebUI/Views/Airports/Index.cshtml
@@ -3,7 +3,7 @@
 @model AirportsViewModel;
 @inject IViewLocalizer Localizer
 
-<div class="card">
+<div class="card text-center mx-auto" style="width:1000px">
     <img class="card-img-top" src="~/airport.jpg">
     <div class="card-body">
         <form asp-action="Index">
@@ -28,73 +28,84 @@
                     <br />
                     <input type="submit" onclick="setStartPage()" value=@Localizer["Search"] class="btn btn-primary" />
                 </div>
-                <table class="table">
-                    <thead>
-                        <tr>
-                            <th>
-                                Name
-                            </th>
-                            <th>
-                                AirportId
-                            </th>
-                            <th>
-                                Longitude
-                            </th>
-                            <th>
-                                Latitude
-                            </th>
-                            <th>
-                                Altitude
-                            </th>
-                            <th>
-                                City Name
-                            </th>
-                            <th>
-                                Counrty
-                            </th>
-                            <th>
-                                Region
-                            </th>
-                            <th></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @foreach (var item in Model.PagedResponse)
-                        {
+                <br />
+                <div class="card-body">
+                    @if (User.IsInRole("Administrator"))
+                    {
+                        @Html.ActionLink("Create", "Create")
+                    }
+                    <table class="table rounded rounded-6 overflow-hidden table-sm table-dark table-hover">
+                        <thead>
                             <tr>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.AirportId)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Longitude)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Latitude)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.Altitude)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.City.Name)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.City.IsoCountry)
-                                </td>
-                                <td>
-                                    @Html.DisplayFor(modelItem => item.City.IsoRegion)
-                                </td>
-                                <td>
-                                    @Html.ActionLink("Edit", "Edit", new { id=item.Id }) |
-                                    @Html.ActionLink("Details", "Details", new { id=item.Id }) |
-                                    @Html.ActionLink("Delete", "Delete", new { id=item.Id })
-                                </td>
+                                <th>
+                                    Name
+                                </th>
+                                <th>
+                                    AirportId
+                                </th>
+                                <th>
+                                    Longitude
+                                </th>
+                                <th>
+                                    Latitude
+                                </th>
+                                <th>
+                                    Altitude
+                                </th>
+                                <th>
+                                    City Name
+                                </th>
+                                <th>
+                                    Counrty
+                                </th>
+                                <th>
+                                    Region
+                                </th>
+                                <th></th>
                             </tr>
-                        }
-                    </tbody>
-                </table>
+                        </thead>
+                        <tbody>
+                            @foreach (var item in Model.PagedResponse)
+                            {
+                                <tr>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.AirportId)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Longitude)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Latitude)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.Altitude)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.City.Name)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.City.IsoCountry)
+                                    </td>
+                                    <td>
+                                        @Html.DisplayFor(modelItem => item.City.IsoRegion)
+                                    </td>
+                                    <td>
+                                        @if (User.IsInRole("Administrator"))
+                                        {
+                                            @Html.ActionLink("Edit", "Edit", new { id = item.Id })
+                                            <br />
+                                            @Html.ActionLink("Delete", "Delete", new { id = item.Id })
+                                        }
+                                        @Html.ActionLink("Details", "Details", new { id=item.Id })
+                                    </td>
+                                </tr>
+                            }
+                        </tbody>
+                    </table>
+                </div>
                 <div class="col">
                     <input asp-for="MetaData.PageSize" min="1" value="@Model.MetaData.PageSize" class="form-control" />
                 </div>
