--- a/Fly.WebUI/Views/Flights/Create.cshtml
+++ b/Fly.WebUI/Views/Flights/Create.cshtml
@@ -1,51 +1,47 @@
 ﻿@model Fly.Core.Entities.Flight
 
-<h4>Flight</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/flight.jpg">
+    <div class="card-body">
         <form asp-action="Create">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="DepartureAirportId" class="control-label"></label>
                 <input asp-for="DepartureAirportId" class="form-control" />
                 <span asp-validation-for="DepartureAirportId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="ArrivalAirportId" class="control-label"></label>
                 <input asp-for="ArrivalAirportId" class="form-control" />
                 <span asp-validation-for="ArrivalAirportId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="AircraftId" class="control-label"></label>
                 <input asp-for="AircraftId" class="form-control" />
                 <span asp-validation-for="AircraftId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="DepartureDateTime" class="control-label"></label>
                 <input asp-for="DepartureDateTime" class="form-control" />
                 <span asp-validation-for="DepartureDateTime" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="ArrivalDateTime" class="control-label"></label>
                 <input asp-for="ArrivalDateTime" class="form-control" />
                 <span asp-validation-for="ArrivalDateTime" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
+
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
