--- a/Fly.WebUI/Views/Tickets/Create.cshtml
+++ b/Fly.WebUI/Views/Tickets/Create.cshtml
@@ -5,52 +5,49 @@
 <div class="row">
     <div class="col-md-4">
         <form asp-action="Create">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="TicketState" class="control-label"></label>
                 <input asp-for="TicketState" class="form-control" />
                 <span asp-validation-for="TicketState" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SoldDate" class="control-label"></label>
                 <input asp-for="SoldDate" class="form-control" />
                 <span asp-validation-for="SoldDate" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="FlightId" class="control-label"></label>
                 <input asp-for="FlightId" class="form-control" />
                 <span asp-validation-for="FlightId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SeatId" class="control-label"></label>
                 <input asp-for="SeatId" class="form-control" />
                 <span asp-validation-for="SeatId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="PassengerId" class="control-label"></label>
                 <input asp-for="PassengerId" class="form-control" />
                 <span asp-validation-for="PassengerId" class="text-danger"></span>
-            </div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-primary" />
             </div>
-        </form>
+        </form><br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
+
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
