--- a/Fly.WebUI/Views/Tickets/Edit.cshtml
+++ b/Fly.WebUI/Views/Tickets/Edit.cshtml
@@ -1,56 +1,54 @@
 ﻿@model Fly.Core.Entities.Ticket
 
-<h4>Ticket</h4>
-<hr />
-<div class="row">
-    <div class="col-md-4">
+
+<div class="card  mx-auto" style="width:1000px">
+    <img class="card-img-top" src="~/ticket.jpg">
+    <div class="card-body">
         <form asp-action="Edit">
+            <br />
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
                 <input asp-for="Price" class="form-control" />
                 <span asp-validation-for="Price" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="TicketState" class="control-label"></label>
                 <input asp-for="TicketState" class="form-control" />
                 <span asp-validation-for="TicketState" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SoldDate" class="control-label"></label>
                 <input asp-for="SoldDate" class="form-control" />
                 <span asp-validation-for="SoldDate" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="FlightId" class="control-label"></label>
                 <input asp-for="FlightId" class="form-control" />
                 <span asp-validation-for="FlightId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="SeatId" class="control-label"></label>
                 <input asp-for="SeatId" class="form-control" />
                 <span asp-validation-for="SeatId" class="text-danger"></span>
-            </div>
+            </div><br />
             <div class="form-group">
                 <label asp-for="PassengerId" class="control-label"></label>
                 <input asp-for="PassengerId" class="form-control" />
                 <span asp-validation-for="PassengerId" class="text-danger"></span>
             </div>
-            <div class="form-group">
-                <label asp-for="Id" class="control-label"></label>
-                <input asp-for="Id" class="form-control" />
-                <span asp-validation-for="Id" class="text-danger"></span>
-            </div>
+            <br />
             <div class="form-group">
                 <input type="submit" value="Save" class="btn btn-primary" />
             </div>
         </form>
+        <br />
+        <div>
+            <a asp-action="Index">Back to List</a>
+        </div>
     </div>
 </div>
 
-<div>
-    <a asp-action="Index">Back to List</a>
-</div>
 
 @section Scripts {
     @{await Html.RenderPartialAsync("_ValidationScriptsPartial");}
