add calim based data filtering

--- a/Fly.WebUI/Views/Manager/Index.cshtml
+++ b/Fly.WebUI/Views/Manager/Index.cshtml
@@ -1,5 +1,24 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
+    <img class="card-img" src="~/aircraft.jpg" alt="Card image">
+    <div class="card-img-overlay">
+        <p class="display-1 card-title text-uppercase text-dark ">Aircrafts</p>
+        <a href="/aircrafts" class="stretched-link"></a>
+    </div>
+</div>
+<br />
+<div class="card bg-dark text-white text-center mx-auto" style="width:1000px">
+    <img class="card-img" src="~/flight.jpg" alt="Card image">
+    <div class="card-img-overlay">
+        <p class="display-1 card-title text-uppercase text-light ">Flight</p>
+        <a href="/flights" class="stretched-link"></a>
+    </div>
+</div>
+<br />
+<div class="card bg-dark text-dark text-center mx-auto" style="width:1000px">
+    <img class="card-img" src="~/airport.jpg" alt="Card image">
+    <div class="card-img-overlay">
+        <p class="display-1 card-title text-uppercase text-light ">Airports</p>
+        <a href="/airports" class="stretched-link"></a>
+    </div>
+</div>
+
